<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_category"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_category" />
        <item
            android:id="@+id/nav_priority"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_priority" />
        <item
            android:id="@+id/nav_status"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_status" />
        <item android:id="@+id/nav_note"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_note"/>
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_edit_profile"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_edit_profile" />
            <item
                android:id="@+id/nav_change_pwd"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_change_password" />
        </menu>
    </item>

</menu>
